# vala-projects

app_one/: README.md  application.vala  main.vala  meson.build
app_one/data/: gschema.xml
app_one/meson/: post_install.py
app_one/src/: meson.build
app_one/src/widgets/: window.vala
helloworld/: greet.vala  hello.vala
